# AGIROS_TOOLS

./: agiros_oob_builder_procedural.py  agiros_tools_menu.py  clean_generated.sh  oob_tracks_to_sources.py  rpm_build_any.sh  yaml_git_downloader_release.py
agiros-bloom/: gbpconf_generator.py  setup.cfg  setup.py
agiros-bloom/bloom/generators/: common.py
agiros-bloom/bloom/generators/agirosdebian/: __init__.py  agirosdebian.py  generate_cmd.py  generator.py
