[build_sphinx]
source-dir = doc/
build-dir  = doc/build
all_files  = 1

[upload_sphinx]
upload-dir = doc/build/html

[tool:pytest]
junit_suite_name = bloom

[metadata]
name = agiros-bloom
version = 0.1.0
author = Wang Ruiqi
description = "Customized Bloom for AGIROS distro"
license = BSD
# 确保被识别为 Python 包
packages = find:

[options]
include_package_data = True
# 让 setuptools 自动包含 bloom/generators/agirosdebian 模块
# 如果你有 setup.py，也可以写成 find_packages()

[options.package_data]
# 把模板资源包含进安装包（*.em 文件）
bloom.generators.agirosdebian =
    templates/*/*
    templates/*/*/*

[options.entry_points]
bloom.generators =
    agirosdebian = bloom.generators.agirosdebian:description


